Fixed a bug tha caused the entire body shift left when activating language switch

--- a/src/styles/components/HomeSection.css
+++ b/src/styles/components/HomeSection.css
@@ -45,6 +45,7 @@
     margin-top: 30px;
     border-left: solid 4px #AC905E;
     padding-left: 10px;
+    font-weight: 300;
 }
 
 .section-featured-container{
