--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,12 +6,12 @@
   margin: 0;
   font-family: 'Ubuntu', sans-serif;
   font-family: 'Open Sans', sans-serif;
-  
 
 }
 
 html,
 body {
+  padding: 0px !important;
   max-width: 100vw;
   overflow-x: hidden;
 }
